--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
   </section>
 
   <section id="members">
+  <h2>Meet the Members</h2>
+  <p>This section will showcase profiles of the innovators and contributors in FutureVisionX. Stay tuned as our movement grows!</p>
+</section>
+
+  <section id="members">
     <h2>Join FutureVisionX</h2>
     <p>At FutureVisionX, it’s not just about joining a club — you’re becoming part of a team of amazing youth innovators. Whether you love building, coding, designing, writing, organizing events, teaching others, or have incredible ideas — this is the place for you.</p>
     <ul>
