--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FutureVisionX</title>
+  <title>Heartcoded | FutureVisionX | HeartLink</title>
   <style>
     body {
       background: radial-gradient(circle at top, #0f0f1a, #050510);
@@ -19,7 +18,7 @@
       text-align: center;
       box-shadow: 0 0 10px #0ff;
     }
-    h1 {
+    .collab-title {
       font-size: 3rem;
       color: #0ff;
       margin: 0;
@@ -60,7 +59,7 @@
 </head>
 <body>
   <header>
-    <h1>FutureVisionX</h1>
+    <h1 class="collab-title">Heartcoded <span style="color:#888;">|</span> FutureVisionX <span style="color:#888;">|</span> HeartLink</h1>
     <p>Youth Innovation for a Better Tomorrow</p>
   </header>
   <nav>
@@ -95,9 +94,9 @@
   </section>
 
   <section id="members">
-  <h2>Meet the Members</h2>
-  <p>This section will showcase profiles of the innovators and contributors in FutureVisionX. Stay tuned as our movement grows!</p>
-</section>
+    <h2>Meet the Members</h2>
+    <p>This section will showcase profiles of the innovators and contributors in FutureVisionX. Stay tuned as our movement grows!</p>
+  </section>
 
   <section id="members">
     <h2>Join FutureVisionX</h2>
@@ -128,7 +127,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 FutureVisionX. Empowering innovation.</p>
+    <p>&copy; 2025 Heartcoded • FutureVisionX • HeartLink. Empowering innovation.</p>
   </footer>
 </body>
 </html>
